force-app/main/default/objects/Invoice_Allocation__c/Invoice_Allocation__c.object-meta.xml
<CustomObject>
  <label>Invoice Allocation</label>
  <pluralLabel>Invoice Allocations</pluralLabel>
  <nameField>
    <type>AutoNumber</type>
    <label>Allocation Number</label>
    <displayFormat>IA-{00000000}</displayFormat>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>