force-app/main/default/objects/Invoice_Allocation__c/fields/Allocation_Type__c.field-meta.xml
<CustomField>
  <fullName>Allocation_Type__c</fullName>
  <label>Allocation Type</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <sorted>true</sorted>
      <value><fullName>Progress</fullName><default>true</default><label>Progress</label></value>
      <value><fullName>Deposit</fullName><default>false</default><label>Deposit</label></value>
      <value><fullName>Retainage</fullName><default>false</default><label>Retainage</label></value>
      <value><fullName>Adjustment</fullName><default>false</default><label>Adjustment</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>