force-app/main/default/objects/Invoice_Allocation__c/fields/From_Invoice__c.field-meta.xml
<CustomField>
  <fullName>From_Invoice__c</fullName>
  <label>From Invoice</label>
  <type>Lookup</type>
  <referenceTo>Invoice__c</referenceTo>
  <relationshipName>From_Invoice_Allocations</relationshipName>
  <relationshipLabel>Invoice Allocations (From Invoice)</relationshipLabel>
</CustomField>