force-app/main/default/objects/Invoice_Allocation__c/fields/Percent__c.field-meta.xml
<CustomField>
  <fullName>Percent__c</fullName>
  <label>Percent</label>
  <type>Number</type>
  <precision>5</precision>
  <scale>2</scale>
</CustomField>