force-app/main/default/objects/Invoice_Allocation__c/fields/Posting_Run_Key__c.field-meta.xml
<CustomField>
  <fullName>Posting_Run_Key__c</fullName>
  <label>Posting Run Key</label>
  <type>Text</type>
  <length>80</length>
</CustomField>