force-app/main/default/objects/Invoice_Allocation__c/fields/To_Invoice__c.field-meta.xml
<CustomField>
  <fullName>To_Invoice__c</fullName>
  <label>To Invoice</label>
  <type>MasterDetail</type>
  <referenceTo>Invoice__c</referenceTo>
  <relationshipName>To_Invoice_Invoice_Allocations</relationshipName>
  <relationshipLabel>Invoice Allocations (To Invoice)</relationshipLabel>
</CustomField>