force-app/main/default/objects/Invoice_Allocation__c/validationRules/Amount_or_Percent_Required.validationRule-meta.xml
<ValidationRule>
  <fullName>Amount_or_Percent_Required</fullName>
  <active>true</active>
  <description>Require either Amount or Percent, but not both.</description>
  <errorConditionFormula>
OR(
  AND( ISBLANK(Amount__c), ISBLANK(Percent__c) ),
  AND( NOT(ISBLANK(Amount__c)), NOT(ISBLANK(Percent__c)) )
)
  </errorConditionFormula>
  <errorDisplayField>Amount__c</errorDisplayField>
  <errorMessage>Set either Amount or Percent (not both).</errorMessage>
</ValidationRule>