force-app/main/default/objects/Invoice_Allocation__c/validationRules/Percent_Range.validationRule-meta.xml
<ValidationRule>
  <fullName>Percent_Range</fullName>
  <active>true</active>
  <description>Percent must be between 0 and 100.</description>
  <errorConditionFormula>
NOT( OR( ISBLANK(Percent__c), AND(Percent__c &gt;= 0, Percent__c &lt;= 100) ) )
  </errorConditionFormula>
  <errorDisplayField>Percent__c</errorDisplayField>
  <errorMessage>Percent must be between 0 and 100.</errorMessage>
</ValidationRule>